Fixed wrong z-index in the footer

--- a/src/components/Footer/Footer.css
+++ b/src/components/Footer/Footer.css
@@ -18,6 +18,7 @@ div#footer {
     -ms-user-select: none;
     font-size: 16px;
     transition: height 0.5s cubic-bezier(.79,.14,.15,.86);
+    z-index: 100;
 }
 
 div#footer:hover {
